kubernetes/k8s-raspberry-cluster/farmerzon-address-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmerzon-address-deploy
  labels:
    app: microservice-address
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: microservice-address
  template:
    metadata:
      labels:
        app: microservice-address
    spec:
      containers:
      - name: farmerzon-address
        image: patrikhuber/farmerzon-address:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
