kubernetes/k8s-raspberry-cluster/farmerzon-articles-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farmerzon-articles-deploy
  labels:
    app: microservice-articles
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: microservice-articles
  template:
    metadata:
      labels:
        app: microservice-articles
    spec:
      containers:
      - name: farmerzon-articles
        image: patrikhuber/farmerzon-articles:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000
          initialDelaySeconds: 10
