kubernetes/k8s-raspberry-cluster/farmerzon-address-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-address-cip
  labels:
    app: postgres-address
spec:
  ports:
  - port: 5432
    name: postgres-address
  type: NodePort 
  selector:
    app: postgres-address
