kubernetes/k8s-raspberry-cluster/farmerzon-articles-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-articles-cip
  labels:
    app: postgres-articles
spec:
  ports:
  - port: 5432
    name: postgres-articles
  type: ClusterIP 
  selector:
    app: postgres-articles
