kubernetes/k8s-raspberry-cluster/farmerzon-articles-np.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-articles-np
  labels:
    app: microservice-articles
spec:
  ports:
  - port: 5000
    name: microservice-articles
  type: NodePort 
  selector:
    app: microservice-articles
