kubernetes/k8s-raspberry-cluster/farmerzon-authentication-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-authentication-cip
  labels:
    app: postgres-authentication
spec:
  ports:
  - port: 5432
    name: postgres-authentication
  type: ClusterIP 
  selector:
    app: postgres-authentication
