kubernetes/k8s-raspberry-cluster/farmerzon-authentication-ingress-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-authentication-ingress-cip
  labels:
    app: microservice-authentication
spec:
  ports:
  - port: 5000
    name: microservice-authentication
  type: ClusterIP 
  selector:
    app: microservice-authentication
