kubernetes/k8s-raspberry-cluster/farmerzon-backend-ingress-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-backend-ingress-cip
  labels:
    app: microservice-backend
spec:
  ports:
  - port: 5000
    name: microservice-backend
  type: ClusterIP 
  selector:
    app: microservice-backend
