kubernetes/k8s-raspberry-cluster/farmerzon-backend-np.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-backend-np
  labels:
    app: microservice-backend
spec:
  ports:
  - port: 5000
    name: microservice-backend
  type: NodePort 
  selector:
    app: microservice-backend
