kubernetes/k8s-raspberry-cluster/farmerzon-frontend-ingress-cip.yml
apiVersion: v1
kind: Service
metadata:
  name: farmerzon-frontend-ingress-cip
  labels:
    app: microservice-frontend
spec:
  ports:
  - port: 80
    name: microservice-frontend
  type: ClusterIP
  selector:
    app: microservice-frontend
