kubernetes/k8s-raspberry-cluster/farmerzon-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: farmerzon-ingress
spec:
  rules:
  - http:
      paths:
      - path: /address
        backend:
          serviceName: farmerzon-address-np
          servicePort: 30388
